--- a/project_details.html
+++ b/project_details.html
@@ -56,7 +56,7 @@
                 <br>
                 <h2 class="text-center">Project Details</h2>
                 <div class="form-container">
-                    <form action="details_form.php" method="post">
+                    <form action="src\details_form.php" method="post">
 
                         <div class="mb-3">
                             <label for="ptbReference" class="form-label">PTB Reference</label>
